Prevent flicker by letting velocity decide the theme variant Fix unclickable suitefilter input

--- a/fitnesse/resources/bootstrap-plus/css/codemirror/theme/darcula.css
+++ b/fitnesse/resources/bootstrap-plus/css/codemirror/theme/darcula.css
@@ -3,7 +3,7 @@
     From IntelliJ IDEA by JetBrains
  */
 
-.cm-s-darcula .cm-keyword {color: #708;}
+.cm-s-darcula .cm-keyword {color: #00afef;}
 .cm-s-darcula .cm-atom {color: #219;}
 .cm-s-darcula .cm-number {}
 .cm-s-darcula .cm-def {color: #00f;}
@@ -49,102 +49,3 @@
   background-color: #494d4e !important;
   color: #9c9e9e !important;
 }
-
-/**
-.body .breadcrumb .navbar-fixed-top {
-    background-color: #2b2b2b;
-    color: #e8e8e8;
-}
-
-.editPage .textarea-toolbar input[type="button"] {
-    color: #ffffff;
-    background-color: #6b6b6b;
-    border-color: #828282;
-    padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-    border: 1px solid #656565;
-    margin: 0px;
-    box-shadow: none;
-    margin: 3px 0 6px 0;
-}
-
-input, select, textarea {
-    border-radius: 5px;
-    border: 1px solid #545454;
-    background-color: #3a3a3a;
-    padding-left: 3px;
-}
-
-.CodeMirror {
-    border: 1px solid #676767;
-}
-
-input[type="submit"] {
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    padding: 3px 20px;
-    border-radius: 5px;
-    font-weight: 600;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    margin: 2px;
-    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.19);
-    border: 2px solid #ffffff;
-    color: #ffffff;
-    background-color: #0a9841;
-    border-color: #0a9841;
-    border: 2px solid #0a9841;
-}
-
-button, a.button, input[type="button"] {
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    padding: 3px 20px;
-    border-radius: 5px;
-    font-weight: 600;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    margin: 2px;
-    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.19);
-    border: 2px solid #ffffff;
-    color: #333333;
-    background-color: #6f6f6f;
-    border-color: #737373;
-}
-*/
