--- a/fitnesse/resources/bootstrap-plus/less/dark/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/customize.less
@@ -90,10 +90,11 @@ label {
 
 #tagfilter label {
   position: relative;
-  left: 30px;
+  left: 130px;
   font-weight: normal;
   color: #ccc;
   bottom: 20px;
+  max-width: 40px;
 }
 
 #alltags {
