--- a/fitnesse/resources/bootstrap-plus/less/light/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/light/customize.less
@@ -84,10 +84,11 @@ label {
 
 #tagfilter label {
   position: relative;
-  left: 30px;
+  left: 130px;
   font-weight: normal;
   color: #999;
   bottom: 20px;
+  max-width: 40px;
 }
 
 
